fixed overflow

--- a/src/components/OferComponent/OferSectionComponent.module.css
+++ b/src/components/OferComponent/OferSectionComponent.module.css
@@ -15,11 +15,14 @@
   font-size: 16px;
   text-align: start;
   margin-bottom: 30px;
+
 }
 
 .oferButton{
   color: var(--secondContentColor);
   border: 1px solid var(--secondContentColor);
+  width: 100%;
+  overflow: hidden;
 }
 .oferButton:hover{
 
